--- a/app/.prettierrc
+++ b/app/.prettierrc
@@ -5,5 +5,6 @@
   "doubleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "jsxBracketSameLine": true
+  "jsxBracketSameLine": true,
+  "endOfLine": "lf"
 }
